# rsgm_ros

./: .gitignore  CMakeLists.txt  README.md  apply_patch.bash  generate_patch.bash  package.xml  patch.bash  rSGM.patch
config/: rsgm_ros.rviz  rsgm_ros_verdino.rviz
launch/: VoxelGridTrackingFinal.launch  launch.launch  rsgm_ros.launch  rsgm_ros_verdino.launch
params/: rsgm_ros_params.yaml  rsgm_ros_params_verdino.yaml
src/: CMakeLists.txt  main.cpp  rSGM.h  rsgm_ros.cpp  rsgm_ros.h
